--- a/functions/pages/index.html
+++ b/functions/pages/index.html
@@ -18,8 +18,14 @@
       <h2>Ass En Fuego API</h2>
       <h3>API so hot, it'll make your behind feel the burn!</h3>
     </hgroup>
-
   </main>
+
+  <section>
+    <ul class="api-list">    
+      <li><a href="/api/garden" target="_blank">Garden.json</a>: Listing of my plants.</li>
+    </ul>
+
+  </section>
   
   <footer class="container">
     <p><small>©<script>document.write(new Date().getFullYear())</script></small></p>
