--- a/functions/pages/index.html
+++ b/functions/pages/index.html
@@ -4,31 +4,38 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://unpkg.com/@picocss/pico@1.*/css/pico.min.css">
-  <link rel="stylesheet" href="https://assenfuego.com/stylesheets/style.css">
-  
+  <link rel="stylesheet" href="https://assenfuego.com/stylesheets/style.css">  
   <title>🍑🔥 Ass En Fuego API</title>
 </head>
 
 <body>
-  <main class="container">
-    <h1><a href="/">🍑🔥</a></h1>
-    
-    <hgroup>
-      <h2>Ass En Fuego API</h2>
-      <h3>API so hot, it'll make your behind feel the burn!</h3>
-    </hgroup>
-  </main>
 
-  <section>
-    <ul class="api-list">    
-      <li><a href="/api/garden" target="_blank">Garden.json</a>: Listing of my plants.</li>
-    </ul>
+  <div class="parent-container">
+    <header>
+      <p class="header-emoji button-effect">🍑🔥</p>
+      <h1>Ass En Fuego API</h1>
+      <h2>API so hot, it'll make your behind feel the burn!</h3>
+    </header>
 
-  </section>
-  
-  <footer class="container">
-    <p><small>©<script>document.write(new Date().getFullYear())</script></small></p>
-  </footer>
+    <section>
+      <nav>
+        <ul>    
+          <li><a href="/api/garden" target="_blank"><strong>Garden.json</strong></a>: Listing of my plants.</li>
+          <li><a href="/dist/stylesheets/starter.css" target="_blank"><strong>Starter.css</strong></a>: CSS to help kick-off a project.</li>
+          <li><a href="/dist/images/icons.zip" target="_blank"><strong>Icons.zip</strong></a>: Collection of SVG such as icons, social media, et cetera.</li>
+        </ul>
+      </nav>
+    </section>
+
+    <footer>
+      <div class="button-effect">
+        <p><a href={repoUrl} target="_blank" rel="noreferrer" >
+          <img src="https://assenfuego.com/images/icons/social/circle/github.svg" alt="Github" /></p>
+        <p><small>See Code in Github</a>
+          <br>©<script>document.write(new Date().getFullYear())</script></small></p>
+      </div>
+    </footer>
+  </div>
+
 </body>
 </html>
