ADDED Mozart's Ghost

--- a/functions/pages/404.html
+++ b/functions/pages/404.html
@@ -4,25 +4,32 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://unpkg.com/@picocss/pico@1.*/css/pico.min.css">
-  <link rel="stylesheet" href="https://assenfuego.com/stylesheets/style.css">
-  
-  <title>🍑🔥 404 En Fuego API</title>
+  <link rel="stylesheet" href="https://assenfuego.com/stylesheets/style.css">  
+  <title>🍑🔥 Ass En Fuego API</title>
 </head>
 
 <body>
-  <main class="container">
-    <h1><a href="/">🍑🔥</a></h1>
-    
-    <hgroup>
-      <h2>404 En Fuego API</h2>
-      <h3>API so hot, it'll make your behind feel the burn!</h3>
-    </hgroup>
 
-  </main>
-  
-  <footer class="container">
-    <p><small>©<script>document.write(new Date().getFullYear())</script></small></p>
-  </footer>
+  <div class="parent-container">
+    <header>
+      <p class="header-emoji button-effect">🍑🔥</p>
+      <h1>Ass En Fuego API</h1>
+      <h2>API so hot, it'll make your behind feel the burn!</h3>
+    </header>
+
+    <section>
+      <iframe width="100%" height="500" src="https://www.youtube.com/embed/yduFuBC4whg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    </section>
+
+    <footer>
+      <div class="button-effect">
+        <p><a href={repoUrl} target="_blank" rel="noreferrer" >
+          <img src="https://assenfuego.com/images/icons/social/circle/github.svg" alt="Github" /></p>
+        <p><small>See Code in Github</a>
+          <br>©<script>document.write(new Date().getFullYear())</script></small></p>
+      </div>
+    </footer>
+  </div>
+
 </body>
 </html>
