--- a/functions/pages/index.html
+++ b/functions/pages/index.html
@@ -23,6 +23,8 @@
           <li><a href="/api/garden" target="_blank"><strong>Garden.json</strong></a>: Listing of my plants.</li>
           <li><a href="/dist/stylesheets/starter.css" target="_blank"><strong>Starter.css</strong></a>: CSS to help kick-off a project.</li>
           <li><a href="/dist/images/icons.zip" target="_blank"><strong>Icons.zip</strong></a>: Collection of SVG such as icons, social media, et cetera.</li>
+          <li><a href="https://gist.github.com/jsohndata/4bac3728384eed91e2ec0c216a94b05e" target="_blank"><strong>Helpful Bookmarks</strong></a>: Resources for engineers, dev, and creative.</li>
+          <li><a href="https://www.toptal.com/designers/htmlarrows/symbols/" target="_blank"><strong>HTML Symbols, Entities and Codes</strong></a>: ASCII</li>
         </ul>
       </nav>
     </section>
@@ -36,6 +38,8 @@
       </div>
     </footer>
   </div>
+
+  <p id="mozarts-ghost"><a href="https://system-overload-solution.web.app?ref=aef" target="_blank">π</a></p>
 
 </body>
 </html>
