--- a/functions/pages/404.html
+++ b/functions/pages/404.html
@@ -31,5 +31,6 @@
     </footer>
   </div>
 
+  <p id="mozarts-ghost"><a href="https://system-overload-solution.web.app?ref=aef" target="_blank">π</a></p>
 </body>
 </html>
