--- a/functions/pages/404.html
+++ b/functions/pages/404.html
@@ -13,8 +13,8 @@
   <div class="parent-container">
     <header>
       <p class="header-emoji button-effect">🍑🔥</p>
-      <h1>Ass En Fuego API</h1>
-      <h2>API so hot, it'll make your behind feel the burn!</h3>
+      <h1>어머 이게 뭐야? </h1>
+      <h2 style="font-size: 3rem;"><span style="color:white">404</span> すいません。さようなら</h2>
     </header>
 
     <section>
