--- a/functions/pages/404.html
+++ b/functions/pages/404.html
@@ -9,7 +9,6 @@
 </head>
 
 <body>
-
   <div class="parent-container">
     <header>
       <p class="header-emoji button-effect">🍑🔥</p>
@@ -31,6 +30,9 @@
     </footer>
   </div>
 
-  <p id="mozarts-ghost"><a href="https://system-overload-solution.web.app?ref=aef" target="_blank">π</a></p>
+  <p id="mozarts-ghost"><a href="https://system-overload-solution.web.app?ref=aef"
+    alt="Click on it and press control-shift."
+    title="Click on it and press control-shift."
+    target="_blank">π</a></p>
 </body>
 </html>
