--- a/functions/pages/index.html
+++ b/functions/pages/index.html
@@ -9,7 +9,6 @@
 </head>
 
 <body>
-
   <div class="parent-container">
     <header>
       <p class="header-emoji button-effect">🍑🔥</p>
@@ -31,7 +30,7 @@
 
     <footer>
       <div class="button-effect">
-        <p><a href={repoUrl} target="_blank" rel="noreferrer" >
+        <p><a href="https://github.com/jsohndata/assenfuego-api" target="_blank" rel="noreferrer" >
           <img src="https://assenfuego.com/images/icons/social/circle/github.svg" alt="Github" /></p>
         <p><small>See Code in Github</a>
           <br>©<script>document.write(new Date().getFullYear())</script></small></p>
@@ -43,6 +42,5 @@
     alt="Click on it and press control-shift."
     title="Click on it and press control-shift."
     target="_blank">π</a></p>
-
 </body>
 </html>
