--- a/functions/pages/index.html
+++ b/functions/pages/index.html
@@ -23,7 +23,7 @@
           <li><a href="/dist/stylesheets/starter.css" target="_blank"><strong>Starter.css</strong></a>: CSS to help kick-off a project.</li>
           <li><a href="/dist/images/icons.zip" target="_blank"><strong>Icons.zip</strong></a>: Collection of SVG such as icons, social media, et cetera.</li>
           <li><a href="https://gist.github.com/jsohndata/4bac3728384eed91e2ec0c216a94b05e" target="_blank"><strong>Resource Bookmarks</strong></a>: For Software Engineers, Designers, and Developers.</li>
-          <li><a href="https://www.toptal.com/designers/htmlarrows/symbols/" target="_blank"><strong>HTML Symbols, Entities and Codes</strong></a>: ASCII</li>
+          <li><a href="/dist/files/linkedin-hero-psd.zip" target="_blank"><strong>Linkedin Hero Image PSD</strong></a>: ASCII</li>
         </ul>
       </nav>
     </section>
