UPDATED link to mzg

--- a/functions/pages/index.html
+++ b/functions/pages/index.html
@@ -41,6 +41,6 @@
   <p id="mozarts-ghost"><a href="https://system-overload-solution.web.app?ref=aef"
     alt="Click on it and press control-shift."
     title="Click on it and press control-shift."
-    target="_blank">π</a></p>
+    target="sandra">π</a></p>
 </body>
 </html>
