--- a/functions/pages/index.html
+++ b/functions/pages/index.html
@@ -40,7 +40,6 @@
 
   <p id="mozarts-ghost"><a href="https://system-overload-solution.web.app?ref=aef"
     alt="Click on it and press control-shift."
-    title="Click on it and press control-shift."
-    target="sandra">π</a></p>
+    title="Click on it and press control-shift.">π</a></p>
 </body>
 </html>
