--- a/functions/pages/index.html
+++ b/functions/pages/index.html
@@ -31,7 +31,7 @@
     <footer>
       <div class="button-effect">
         <p><a href="https://github.com/jsohndata/assenfuego-api" target="_blank" rel="noreferrer" >
-          <img src="https://assenfuego.com/images/icons/social/circle/github.svg" alt="Github" /></p>
+          <img src="https://luminkai.com/images/icons/social/circle/github.svg" alt="Github" /></p>
         <p><small>See Code in Github</a>
           <br>©<script>document.write(new Date().getFullYear())</script></small></p>
       </div>
