--- a/functions/pages/404.html
+++ b/functions/pages/404.html
@@ -23,14 +23,14 @@
     <footer>
       <div class="button-effect">
         <p><a href="https://github.com/jsohndata/assenfuego-api" target="_blank" rel="noreferrer" >
-          <img src="https://assenfuego.com/images/icons/social/circle/github.svg" alt="Github" /></p>
+          <img src="https://luminkai.com/images/icons/social/circle/github.svg" alt="Github" /></p>
         <p><small>See Code in Github</a>
           <br>©<script>document.write(new Date().getFullYear())</script></small></p>
       </div>
     </footer>
   </div>
 
-  <p id="mozarts-ghost"><a href="https://system-overload-solution.web.app?ref=aef"
+  <p id="mozarts-ghost"><a href="https://jsohndata.github.io/no-tiempo/mozartsghost?id=3"
     alt="Click on it and press control-shift."
     title="Click on it and press control-shift."
     target="_blank">π</a></p>
