UPDATE mozart ghost css link

--- a/functions/pages/index.html
+++ b/functions/pages/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/styles/main.css">
+  <link rel="stylesheet" type="text/css" href="/styles/main.css">
+  <link rel="stylesheet" type="text/css" href="https://jsohndata.github.io/no-tiempo/src/styles/no-tiempo.mini.css">
   <title>🍑🔥 Ass En Fuego API</title>
 </head>
 
