UPDATE mozart ghost link

--- a/functions/pages/index.html
+++ b/functions/pages/index.html
@@ -39,7 +39,7 @@
     </footer>
   </div>
 
-  <p id="mozarts-ghost"><a href="https://jsohndata.github.io/no-tiempo/mozartsghost?id=3"
+  <p id="mozarts-ghost"><a href="https://jsohndata.github.io/no-tiempo/mozartsghost?id=fuego"
     alt="Click on it and press control-shift."
     title="Click on it and press control-shift.">π</a></p>
 </body>
